_sass/main.scss
html {
  position: relative;
  min-height: 100vh;
  overflow-y: scroll;
  max-width: 45em;
  margin: 0 auto;
  background: #FFFEF2;
}

body {    
    padding: 0 1em;
    font-family: 'Georgia', Serif;
}

#bloglist {
  ul {
  line-height: 2.5;
  list-style: none;
  }
	
	h2 {
		margin: 0;
		padding: 0;
	}
}

ul, li {
    list-style-position: inside;
    text-align: left;
    padding: 0; 
    color: #525050;
}

header {
  display: flex;
  flex-wrap: wrap;
  align-items: center; 
  padding-top: 1em;
  padding-bottom: 1em;
  border-bottom: 1px solid black;
}

header h1 {
  margin: 0;
  padding: 0; 
  font-family: 'Baskerville', Serif;
  
}
  
header nav {
  margin-left: auto;
  /* Move nav to the right */ 
}

  
header ul {
  list-style-type: none;
  margin: 0;
  padding: 0; 
}

header ul li {
  display: inline-block;
  font-family: 'Baskerville', Serif;
  padding: 0 10px;
  margin-right: 1em; 
}

header ul li:last-child {
  margin-right: 0; 
}
  
header ul li a {
  color: black;
  text-decoration: none;  
}

header a:hover {
  color: green;
  text-decoration: none;
}

@media (max-width: 45rem) {
  header nav {
    width: 100%; 
  }
  
  header ul {
    margin-top: 1rem; 
  }
  
  header ul li {
    padding-left: 0;
    margin-right: 0; 
  }
  
  header ul li a {} 
}

.headline {
  text-align: center;
  letter-spacing: 1px;
  margin: 3rem 0; }
  .headline .space {
    display: none; }

@media (max-width: 70rem) {
  .headline {
    text-align: left; 
  }
  .headline br {
    display: none; 
  }
  .headline .space {
    display: inline; 
  } 
}

#homecontent {
  text-align: justify;
}

.post-content { 
  p {
    font-family: 'Georgia', Serif;
    line-height: 2;
  }

  h1, h2, h3, h4 {
    font-family: 'Georgia', Serif; 
  }
  
  li {
    list-style: disc;
    margin-left: 1em;
    color: #525050;
  }
}

#top-name {
  font-weight: normal;
}

h1, h2, h3, h4 {
	font-family: 'Georgia', Serif;
	font-weight: normal;
	padding-top: 1.5em;
}

p {
  font-family: 'Georgia', Serif;
  line-height: 2;
  color: #525050;
}

strong {
    color: #333;
}

a {
    text-decoration: none;   
    color: green;
}

a:hover {
    color: darkgreen;
    text-decoration: underline; 
}

.head {
    margin-bottom: 30px;
}

code,
pre {
  background: #282a36;
    ::selection {
    background: #44475a;
  }

}

code {
  padding: 2px 4px;
  vertical-align: text-bottom;
  color: #f8f8f2;
}

pre {
  padding: 1em;
  border-radius: 4px;
}

main {
  padding-top: 1.5em;
  padding-bottom: 2em;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
    border:2px solid #ff0000;
}

th {
    border:2px solid #000000;
}

td {
    border:1px solid #000000;
}

blockquote {
  border-left: 4px solid #dadada; 
  padding-left: 0.5em;
}

.row {
  margin-top: 5%;
}

.intro {
  margin-top: 5%;
}

#pagetitle {
  font-size: 2em;
  font-weight: normal;
  padding-bottom: 0;
  padding-top: 0;
}

#post-title {
  margin-bottom: 0;
  padding-bottom: 0;
	padding-top: 0;

}

#post-date {
  margin-top: 0em;
}

img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

// Styling for Web Apps Page

.box-wrapper {
  display: grid;
  margin-top: 5%;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-template-rows: minmax(200px, 1fr);
  grid-column-gap: 2em;
  grid-row-gap: 5em;
}

.box {
  height: 250px;
  object-fit: cover;
  display: block; 
  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
  position: relative;
  border-radius: 3px;
  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
  text-align: center;
  background-color: #ffffff;
  color: #ffffff;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

.box::after {
  content: "";
  border-radius: 5px;
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
  opacity: 0;
  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.box:hover {
  -webkit-transform: scale(1.10, 1.10);
  transform: scale(1.10, 1.10);
}

.box:hover::after {
    opacity: 1;
}

.project-generic {
  background: linear-gradient(90deg, #FC466B 0%, #3F5EFB 100%);
}

.project-fractal {
  background: linear-gradient(90deg, #FFFF00 0%, #00FF00 100%);
}

.project-space {
  background-image: url("https://images.pexels.com/photos/110854/pexels-photo-110854.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
  background-position: center; 
}

.project-mp {
  background: linear-gradient(90deg, #00FF80 0%, #0000FF 100%);
}

.project-gallery {
  background: linear-gradient(180deg, #FDEB71 0%, #E2B0FF 100%);
}

.project-stars {
  background-image: url("https://i.ytimg.com/vi/qWDmlFsIMHM/maxresdefault.jpg");
  background-position: center;
}

.project-fractal {
  background: linear-gradient(90deg, #FF0000 0%, #FF8000 100%);
}

.project-graphics {
  background: linear-gradient(90deg, #FF8000 0%, #FFFF00 100%);
}

